Updates through chapter 5.

--- a/src/main/java/org/nullable/lox/BUILD
+++ b/src/main/java/org/nullable/lox/BUILD
@@ -1,10 +1,10 @@
 java_library(
-	name = "lox",
-	srcs = ["Lox.java"],
+    name = "lox",
+    srcs = glob(["*.java"]) + ["//src/main/java/org/nullable/lox/tool:generate_ast"],
 )
 
 java_binary(
-	name = "jlox",
-	runtime_deps = [":lox"],
-	main_class = "org.nullable.Lox",
+    name = "jlox",
+    main_class = "org.nullable.lox.Lox",
+    runtime_deps = [":lox"],
 )
